--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,8 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Merriweather:wght@700;900&display=swap");
+:root {
+  --font-family: "Lato", sans-serif;
+  --second-family: "Merriweather", sans-serif;
+  --text-color: #222;
+  --accent: #005fa3;
+  --white: #fff;
+}
+
 body {
-  font-family: "Lato", sans-serif;
+  font-family: var(--font-family);
   font-style: normal;
-  color: #000;
+  color: var(--text-color);
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -318,21 +326,107 @@ template {
   display: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 .wrapper {
+  width: 100%;
   min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  padding: 0;
+  margin: 0;
 }
 
 .container {
   max-width: 1176px;
   padding: 0px 30px;
   margin: 0 auto;
+}
+
+.nav {
+  padding: 20px 0px 30px 0px;
+  background-color: var(--white);
+}
+
+.nav__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.nav__logo {
+  font-family: var(--second-family);
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 138%;
+  color: var(--accent);
+  padding: 0px 0px 0px 70px;
+  background-image: url("../../img/logo.svg");
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: 40px 40px;
+}
+
+.line__top, .line__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.line__top:not(:last-child), .line__bottom:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.line__link {
+  font-family: var(--font-family);
+  color: var(--text-color);
+}
+
+.line__link--small {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 132%;
+  color: #000;
+  padding: 3px 0px 3px 32px;
+  background-repeat: no-repeat;
+  background-position: left;
+}
+.line__link--small:not(:last-child) {
+  margin-right: 40px;
+}
+
+.line__link--phone {
+  background-image: url("../../img/phone.svg");
+}
+
+.line__link--time {
+  background-image: url("../../img/time.svg");
+}
+
+.line__link--envelope {
+  background-image: url("../../img/envelope.svg");
+}
+
+.line__link--map {
+  background-image: url("../../img/map.svg");
+}
+
+.line__link--big {
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 10%;
+  text-transform: uppercase;
+}
+.line__link--big:not(:last-child) {
+  margin-right: 68px;
 }
 
 .none {
