--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -1,14 +1,25 @@
+//-----[---ПЕРЕМЕННЫЕ---]-------------------------------------------------------------------------------------------------------------
+:root {
+	--font-family: "Lato", sans-serif;
+	--second-family: "Merriweather", sans-serif;
+	--text-color: #222;
+	--accent: #005fa3;
+	--white: #fff;
+}
+//-----[--/ПЕРЕМЕННЫЕ/--]-------------------------------------------------------------------------------------------------------------
+
+
+
 //-----[---ШРИФТЫ---]-----------------------------------------------------------------------------------------------------------------
 //-----[Подключаем шрифты/]-----------------------------------------------------------------------------------------------------------
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Merriweather:wght@700;900&display=swap');
 //-----[/Подключаем шрифты/]----------------------------------------------------------------------------------------------------------
 
 //-----[Шрифт по умолчанию/]----------------------------------------------------------------------------------------------------------
-$fontfamily:'lato';
 body {
-	font-family: 'Lato', sans-serif;
+	font-family: var(--font-family);
 	font-style: normal;
-	color: #000;
+	color: var(--text-color);
 }
 //-----[/Шрифт по умолчанию/]---------------------------------------------------------------------------------------------------------
 //-----[--/ШРИФТЫ/--]-----------------------------------------------------------------------------------------------------------------
@@ -16,17 +27,10 @@ body {
 
 
 
-//-----[---ПЕРЕМЕННЫЕ---]-------------------------------------------------------------------------------------------------------------
-
-//-----[--/ПЕРЕМЕННЫЕ/--]-------------------------------------------------------------------------------------------------------------
-
-
-
-
 //-----[---ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ---]---------------------------------------------------------------------------------------------
 @import './components/_normalize.scss';
-body {
-	
+a {
+	text-decoration: none;
 }
 //-----[--/ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ/--]---------------------------------------------------------------------------------------------
 
@@ -35,9 +39,10 @@ body {
 
 //-----[---ОБОЛОЧКА---]---------------------------------------------------------------------------------------------------------------
 .wrapper {
+	width: 100%;
 	min-height: 100%;
-	display: flex;
-	flex-direction: column;
+	padding: 0;
+	margin: 0;
 }
 //-----[--/ОБОЛОЧКА/--]---------------------------------------------------------------------------------------------------------------
 
@@ -63,7 +68,7 @@ body {
 
 
 //-----[---ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ---]--------------------------------------------------------------------------
-
+@import './components/nav';
 //-----[--/ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ/--]--------------------------------------------------------------------------
 
 
