добавил секцию header

--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -68,7 +68,10 @@ a {
 
 
 //-----[---ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ---]--------------------------------------------------------------------------
+@import './components/base';
 @import './components/nav';
+@import './components/header';
+@import './components/titles';
 //-----[--/ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ/--]--------------------------------------------------------------------------
 
 
