--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -343,9 +343,122 @@ a {
   margin: 0 auto;
 }
 
+.bg {
+  background-color: #808080;
+  background-image: url("../../img/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.button {
+  display: block;
+  width: 23%;
+  border: 1px solid transparent;
+  padding: 19px 18px;
+  margin: 0px 0px 120px 0px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--white);
+  /* width: 270px; */
+  /* height: 60px; */
+  background-color: var(--accent);
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.button:hover {
+  border: 1px solid var(--white);
+  background-color: rgba(0, 95, 163, 0.8);
+}
+
+.controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.controls__dots {
+  font-size: 0;
+}
+
+.dot {
+  display: inline-block;
+  font-size: 0;
+  width: 10px;
+  height: 10px;
+  background-color: var(--white);
+  opacity: 0.4;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.dot:not(:last-child) {
+  margin-right: 40px;
+}
+
+.dot:hover {
+  opacity: 1;
+}
+
+.dot--active {
+  opacity: 1;
+}
+
+.dot--blue {
+  background-color: var(--accent);
+}
+
+.controls__arrows {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.controls__arrow {
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 60px;
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 11px 17px;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.controls__arrow:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+.controls__arrow--prev {
+  background-image: url("../../img/arrow-prev.svg");
+}
+
+.controls__arrow--next {
+  background-image: url("../../img/arrow-next.svg");
+}
+
+.controls__arrow--blue {
+  background-color: var(--accent);
+}
+
 .nav {
   padding: 20px 0px 30px 0px;
   background-color: var(--white);
+  margin: 0px 0px 60px 0px;
 }
 
 .nav__wrapper {
@@ -427,6 +540,50 @@ a {
 }
 .line__link--big:not(:last-child) {
   margin-right: 68px;
+}
+
+.header {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header__fullscreen {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 140px 0px 110px 0px;
+}
+
+.fullscreen__title {
+  font-family: var(--second-family);
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 68px;
+  color: var(--white);
+  margin: 0px 0px 80px 0px;
+}
+.fullscreen__title span {
+  display: block;
+}
+
+.title {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 24px;
+  /* line-height: 33px; */
+  line-height: 138%;
+  color: #bdbdbd;
+}
+
+.subtitle span {
+  display: block;
 }
 
 .none {
