--- a/docs/scss/components/_nav.scss
+++ b/docs/scss/components/_nav.scss
@@ -1,6 +1,7 @@
 .nav {
     padding: 20px 0px 30px 0px;
     background-color: var(--white);
+    margin: 0px 0px 60px 0px;
 }
 .nav__wrapper {
     display: flex;
