--- a/docs/scss/components/_nav.scss
+++ b/docs/scss/components/_nav.scss
@@ -29,8 +29,23 @@
     }
 }
 .line__link {
+    position: relative;
     font-family: var(--font-family);
     color: var(--text-color);
+    &:before {
+        position: absolute;
+        display: block;
+        content: '';
+        width: 0%;
+        height: 1px;
+        left: 0;
+        bottom: -3px;
+        background-color: var(--accent);
+        transition: all .3s ease-out;
+    }
+}
+.line__link:hover.line__link:before {
+    width: 100%;
 }
 .line__link--small {
     font-weight: 400;
