--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -359,7 +359,7 @@ a {
   margin: 0px 0px 120px 0px;
   font-family: var(--font-family);
   font-weight: 400;
-  font-size: 18px;
+  font-size: 1.13em;
   line-height: 25px;
   text-align: center;
   color: var(--white);
@@ -455,6 +455,29 @@ a {
   background-color: var(--accent);
 }
 
+@-webkit-keyframes fade {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .nav {
   padding: 20px 0px 30px 0px;
   background-color: var(--white);
@@ -476,7 +499,7 @@ a {
 .nav__logo {
   font-family: var(--second-family);
   font-weight: 900;
-  font-size: 36px;
+  font-size: 2.3em;
   line-height: 138%;
   color: var(--accent);
   padding: 0px 0px 0px 70px;
@@ -522,7 +545,7 @@ a {
 
 .line__link--small {
   font-weight: 400;
-  font-size: 13px;
+  font-size: 0.85em;
   line-height: 132%;
   color: #000;
   padding: 3px 0px 3px 32px;
@@ -551,7 +574,7 @@ a {
 
 .line__link--big {
   font-weight: 700;
-  font-size: 14px;
+  font-size: 0.88em;
   letter-spacing: 10%;
   text-transform: uppercase;
 }
@@ -581,7 +604,7 @@ a {
 .fullscreen__title {
   font-family: var(--second-family);
   font-weight: 700;
-  font-size: 48px;
+  font-size: 3em;
   line-height: 68px;
   color: var(--white);
   margin: 0px 0px 80px 0px;
