--- a/docs/scss/components/_header.scss
+++ b/docs/scss/components/_header.scss
@@ -11,7 +11,7 @@
 .fullscreen__title {
     font-family: var(--second-family);
     font-weight: 700;
-    font-size: 48px;
+    font-size: 3em;
     line-height: 68px;
     color: var(--white);
     margin: 0px 0px 80px 0px;
