--- a/docs/scss/components/_header.scss
+++ b/docs/scss/components/_header.scss
@@ -11,8 +11,8 @@
 .fullscreen__title {
     font-family: var(--second-family);
     font-weight: 700;
-    font-size: 3em;
-    line-height: 68px;
+    font-size: 48px;
+    line-height: 66px;
     color: var(--white);
     margin: 0px 0px 80px 0px;
     span  {
