--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -326,6 +326,11 @@ template {
   display: none;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 a {
   text-decoration: none;
 }
@@ -345,10 +350,7 @@ a {
 
 .bg {
   background-color: #808080;
-  background-image: url("../../img/bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background: url("../../img/bg.png") center/cover no-repeat;
 }
 
 .button {
@@ -359,12 +361,10 @@ a {
   margin: 0px 0px 120px 0px;
   font-family: var(--font-family);
   font-weight: 400;
-  font-size: 1.13em;
+  font-size: 18px;
   line-height: 25px;
   text-align: center;
   color: var(--white);
-  /* width: 270px; */
-  /* height: 60px; */
   background-color: var(--accent);
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
@@ -499,8 +499,8 @@ a {
 .nav__logo {
   font-family: var(--second-family);
   font-weight: 900;
-  font-size: 2.3em;
-  line-height: 138%;
+  font-size: 36px;
+  line-height: 50px;
   color: var(--accent);
   padding: 0px 0px 0px 70px;
   background-image: url("../../img/logo.svg");
@@ -545,8 +545,8 @@ a {
 
 .line__link--small {
   font-weight: 400;
-  font-size: 0.85em;
-  line-height: 132%;
+  font-size: 13px;
+  line-height: 17px;
   color: #000;
   padding: 3px 0px 3px 32px;
   background-repeat: no-repeat;
@@ -574,7 +574,7 @@ a {
 
 .line__link--big {
   font-weight: 700;
-  font-size: 0.88em;
+  font-size: 14px;
   letter-spacing: 10%;
   text-transform: uppercase;
 }
@@ -604,8 +604,8 @@ a {
 .fullscreen__title {
   font-family: var(--second-family);
   font-weight: 700;
-  font-size: 3em;
-  line-height: 68px;
+  font-size: 48px;
+  line-height: 66px;
   color: var(--white);
   margin: 0px 0px 80px 0px;
 }
@@ -614,15 +614,94 @@ a {
 }
 
 .title {
+  display: block;
+  width: 100%;
   font-family: var(--font-family);
   font-weight: 900;
   font-size: 24px;
-  /* line-height: 33px; */
-  line-height: 138%;
+  line-height: 33px;
   color: #bdbdbd;
+  text-align: left;
+  margin: 0px 0px 40px 0px;
 }
 
+.subtitle {
+  display: block;
+  width: 100%;
+  font-family: var(--second-family);
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 70px;
+  color: #333;
+  text-align: left;
+}
 .subtitle span {
+  display: block;
+}
+
+.service {
+  width: 100%;
+  background: #ebebeb;
+  padding: 140px 0px;
+}
+
+.service__subtitle {
+  margin: 0px 0px 100px 0px;
+}
+
+.service__content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 30px 1fr 30px 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+
+.service__card {
+  position: relative;
+  padding: 45px;
+  min-height: 360px;
+  background: url("../../img/about-card.png") center/cover no-repeat, #2F3135;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  cursor: pointer;
+}
+.service__card::before {
+  position: absolute;
+  display: block;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.65;
+  z-index: 1;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.service__card:hover.service__card::before {
+  background-color: #005FA3;
+}
+
+.service__text {
+  position: relative;
+  z-index: 10;
+  display: block;
+  width: 100%;
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 30px;
+  color: var(--white);
+  margin: 0;
+}
+.service__text span {
   display: block;
 }
 
