--- a/docs/scss/components/_nav.scss
+++ b/docs/scss/components/_nav.scss
@@ -11,8 +11,8 @@
 .nav__logo {
     font-family: var(--second-family);
     font-weight: 900;
-    font-size: 2.3em;
-    line-height: 138%;
+    font-size: 36px;
+    line-height: 50px;
     color: var(--accent);
 
     padding: 0px 0px 0px 70px;
@@ -49,8 +49,8 @@
 }
 .line__link--small {
     font-weight: 400;
-    font-size: 0.85em;
-    line-height: 132%;
+    font-size: 13px;
+    line-height: 17px;
     color: #000;
     &:not(:last-child){
         margin-right: 40px;
@@ -73,7 +73,7 @@
 }
 .line__link--big {
     font-weight: 700;
-    font-size: 0.88em;
+    font-size: 14px;
     letter-spacing: 10%;
     text-transform: uppercase;
     &:not(:last-child){
