--- a/docs/scss/components/_titles.scss
+++ b/docs/scss/components/_titles.scss
@@ -1,13 +1,23 @@
 .title {
+    display: block;
+    width: 100%;
     font-family: var(--font-family);
     font-weight: 900;
     font-size: 24px;
-
-    /* line-height: 33px; */
-    line-height: 138%;
+    line-height: 33px;
     color: #bdbdbd;
+    text-align: left;
+    margin: 0px 0px 40px 0px;
 }
 .subtitle {
+    display: block;
+    width: 100%;
+    font-family: var(--second-family);
+    font-weight: 900;
+    font-size: 48px;
+    line-height: 70px;
+    color: #333;
+    text-align: left;
     span  {
         display: block;
     }
