--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -340,6 +340,7 @@ a {
   min-height: 100%;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 .container {
@@ -349,16 +350,15 @@ a {
 }
 
 .bg {
-  background-color: #808080;
-  background: url("../../img/bg.png") center/cover no-repeat;
+  background: url("../../img/bg.png") center/cover no-repeat, #808080;
 }
 
+/* Button */
 .button {
   display: block;
   width: 23%;
   border: 1px solid transparent;
   padding: 19px 18px;
-  margin: 0px 0px 120px 0px;
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 18px;
@@ -369,12 +369,24 @@ a {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
+@media (max-width: 992px) {
+  .button {
+    padding: 19px 10px;
+    width: 40%;
+  }
+}
+@media (max-width: 768px) {
+  .button {
+    width: 100%;
+  }
+}
 
 .button:hover {
   border: 1px solid var(--white);
   background-color: rgba(0, 95, 163, 0.8);
 }
 
+/* Controls */
 .controls {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -386,9 +398,22 @@ a {
       -ms-flex-align: end;
           align-items: flex-end;
 }
+@media (max-width: 768px) {
+  .controls {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 
 .controls__dots {
+  display: block;
   font-size: 0;
+}
+@media (max-width: 768px) {
+  .controls__dots {
+    display: none;
+  }
 }
 
 .dot {
@@ -426,7 +451,6 @@ a {
 }
 
 .controls__arrow {
-  position: relative;
   display: block;
   width: 60px;
   height: 60px;
@@ -437,6 +461,12 @@ a {
   background-size: 11px 17px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+  margin: 0;
+}
+@media (max-width: 768px) {
+  .controls__arrow {
+    margin: 0px 30px;
+  }
 }
 
 .controls__arrow:hover {
@@ -453,6 +483,54 @@ a {
 
 .controls__arrow--blue {
   background-color: var(--accent);
+}
+
+/* Burger */
+.burger {
+  display: none;
+}
+@media (max-width: 992px) {
+  .burger {
+    display: block;
+    padding: 17px 10px;
+  }
+}
+
+.burger__item {
+  position: relative;
+  display: block;
+  background-color: var(--accent);
+  width: 30px;
+  height: 3px;
+  border-radius: 2px;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.burger__item:nth-child(1) {
+  -webkit-transform: translateY(-5px);
+      -ms-transform: translateY(-5px);
+          transform: translateY(-5px);
+}
+.burger__item:nth-child(3) {
+  -webkit-transform: translateY(5px);
+      -ms-transform: translateY(5px);
+          transform: translateY(5px);
+}
+
+.burger--active .burger__item:nth-child(1) {
+  -webkit-transform: rotate(-45deg) translateY(4px);
+      -ms-transform: rotate(-45deg) translateY(4px);
+          transform: rotate(-45deg) translateY(4px);
+}
+.burger--active .burger__item:nth-child(2) {
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+}
+.burger--active .burger__item:nth-child(3) {
+  -webkit-transform: rotate(45deg) translateY(-4px);
+      -ms-transform: rotate(45deg) translateY(-4px);
+          transform: rotate(45deg) translateY(-4px);
 }
 
 @-webkit-keyframes fade {
@@ -483,6 +561,11 @@ a {
   background-color: var(--white);
   margin: 0px 0px 60px 0px;
 }
+@media (max-width: 992px) {
+  .nav {
+    margin: 0px 0px 0px 0px;
+  }
+}
 
 .nav__wrapper {
   display: -webkit-box;
@@ -509,6 +592,29 @@ a {
   background-size: 40px 40px;
 }
 
+.nav__line {
+  display: block;
+  position: static;
+}
+@media (max-width: 992px) {
+  .nav__line {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    top: 0;
+    left: 0;
+    background-color: var(--white);
+    z-index: 10;
+    -webkit-transform: translate(100%, 95px);
+        -ms-transform: translate(100%, 95px);
+            transform: translate(100%, 95px);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .line__top, .line__bottom {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -519,6 +625,20 @@ a {
 }
 .line__top:not(:last-child), .line__bottom:not(:last-child) {
   margin-bottom: 20px;
+}
+@media (max-width: 992px) {
+  .line__top, .line__bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  .line__top:not(:last-child), .line__bottom:not(:last-child) {
+    margin-bottom: 0px;
+  }
 }
 
 .line__link {
@@ -555,6 +675,12 @@ a {
 .line__link--small:not(:last-child) {
   margin-right: 40px;
 }
+@media (max-width: 992px) {
+  .line__link--small:not(:last-child) {
+    margin-right: 40px;
+    margin-bottom: 20px;
+  }
+}
 
 .line__link--phone {
   background-image: url("../../img/phone.svg");
@@ -581,8 +707,20 @@ a {
 .line__link--big:not(:last-child) {
   margin-right: 68px;
 }
+@media (max-width: 992px) {
+  .line__link--big:not(:last-child) {
+    margin-bottom: 17px;
+  }
+}
+
+.nav__line--active {
+  -webkit-transform: translate(0%, 95px);
+      -ms-transform: translate(0%, 95px);
+          transform: translate(0%, 95px);
+}
 
 .header {
+  position: relative;
   width: 100%;
   height: 100vh;
   display: -webkit-box;
@@ -600,6 +738,11 @@ a {
           flex: 1 1 auto;
   padding: 140px 0px 110px 0px;
 }
+@media (max-width: 992px) {
+  .header__fullscreen {
+    padding: 30px 0px 30px 0px;
+  }
+}
 
 .fullscreen__title {
   font-family: var(--second-family);
@@ -612,7 +755,32 @@ a {
 .fullscreen__title span {
   display: block;
 }
+@media (max-width: 768px) {
+  .fullscreen__title {
+    font-size: 40px;
+    margin: 0px 0px 60px 0px;
+  }
+  .fullscreen__title span {
+    display: inline;
+  }
+}
 
+.fullscreen__slider {
+  padding: 0px 0px 120px 0px;
+}
+@media (max-width: 992px) {
+  .fullscreen__slider {
+    padding: 30px 0px 45px 0px;
+  }
+}
+
+/* .fullscreen__button {
+    width: 23%;
+    @media (max-width: 768px) {
+        width: 100%;
+        padding: 19px 10px;
+    }
+} */
 .title {
   display: block;
   width: 100%;
