--- a/docs/scss/components/_base.scss
+++ b/docs/scss/components/_base.scss
@@ -1,13 +1,15 @@
 .bg {
-    background-color: #808080;
-    background: url('../../img/bg.png') center/cover no-repeat;
+    background: url('../../img/bg.png') center/cover no-repeat, #808080;
 }
+
+
+
+/* Button */
 .button {
     display: block;
     width: 23%;
     border: 1px solid transparent;
     padding: 19px 18px;
-    margin: 0px 0px 120px 0px;
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 18px;
@@ -16,18 +18,36 @@
     color: var(--white);
     background-color: var(--accent);
     transition: all .3s ease-out;
+    @media (max-width: 992px) {
+        padding: 19px 10px;
+        width: 40%;
+    }
+    @media (max-width: 768px) {
+        width: 100%;
+    }
 }
 .button:hover {
     border: 1px solid var(--white);
     background-color: rgb(0, 95, 163, 0.8);
 }
+
+
+
+/* Controls */
 .controls {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    @media (max-width: 768px) {
+        justify-content: center;
+    }
 }
 .controls__dots {
+    display: block;
     font-size: 0;
+    @media (max-width: 768px) {
+        display: none;
+    }
 }
 .dot {
     display: inline-block;
@@ -56,7 +76,6 @@
     display: flex;
 }
 .controls__arrow {
-    position: relative;
     display: block;
     width: 60px;
     height: 60px;
@@ -66,6 +85,10 @@
     background-position: center;
     background-size: 11px 17px;
     transition: all .3s ease-out;
+    margin: 0;
+    @media (max-width: 768px) {
+        margin: 0px 30px;
+    }
 }
 .controls__arrow:hover {
     background-color: rgb(255, 255, 255, 0.4);
@@ -82,6 +105,40 @@
 
 
 
+/* Burger */
+.burger {
+    display: none;
+    @media (max-width: 992px) {
+        display: block;
+        padding: 17px 10px;
+    }
+}
+.burger__item {
+    position: relative;
+    display: block;
+    background-color: var(--accent);
+    width: 30px;
+    height: 3px;
+    border-radius: 2px;
+    transition: all .3s ease-out;
+    &:nth-child(1) {
+        transform: translateY(-5px);
+    }
+    &:nth-child(3) {
+        transform: translateY(5px);
+    }
+}
+.burger--active {
+    .burger__item:nth-child(1) {
+        transform: rotate(-45deg) translateY(4px);
+    }
+    .burger__item:nth-child(2) {
+        transform: scale(0);
+    }
+    .burger__item:nth-child(3) {
+        transform: rotate(45deg) translateY(-4px);
+    }
+}
 
 
 
