--- a/docs/scss/components/_header.scss
+++ b/docs/scss/components/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -7,6 +8,9 @@
 .header__fullscreen {
     flex: 1 1 auto;
     padding: 140px 0px 110px 0px;
+    @media (max-width: 992px) {
+        padding: 30px 0px 30px 0px;
+    }
 }
 .fullscreen__title {
     font-family: var(--second-family);
@@ -18,4 +22,24 @@
     span  {
         display: block;
     }
+    @media (max-width: 768px) {
+        font-size: 40px;
+        margin: 0px 0px 60px 0px;
+        span {
+            display: inline;
+        }
+    }
 }
+.fullscreen__slider {
+    padding: 0px 0px 120px 0px;
+    @media (max-width: 992px) {
+        padding: 30px 0px 45px 0px;
+    }
+}
+/* .fullscreen__button {
+    width: 23%;
+    @media (max-width: 768px) {
+        width: 100%;
+        padding: 19px 10px;
+    }
+} */
