--- a/docs/scss/components/_nav.scss
+++ b/docs/scss/components/_nav.scss
@@ -2,6 +2,9 @@
     padding: 20px 0px 30px 0px;
     background-color: var(--white);
     margin: 0px 0px 60px 0px;
+    @media (max-width: 992px) {
+        margin: 0px 0px 0px 0px;
+    }
 }
 .nav__wrapper {
     display: flex;
@@ -21,11 +24,34 @@
     background-position: left;
     background-size: 40px 40px;
 }
+.nav__line {
+    display: block;
+    position: static;
+    @media (max-width: 992px) {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        top: 0;
+        left: 0;
+        background-color: var(--white);
+        z-index: 10;
+        transform: translate(100%, 95px);
+        display: flex;
+    }
+}
 .line__top, .line__bottom {
     display: flex;
     justify-content: space-between;
     &:not(:last-child) {
         margin-bottom: 20px;
+    }
+    @media (max-width: 992px) {
+        flex-direction: column;
+        justify-content: start;
+        &:not(:last-child) {
+            margin-bottom: 0px;
+        }
     }
 }
 .line__link {
@@ -58,6 +84,12 @@
     padding: 3px 0px 3px 32px;
     background-repeat: no-repeat;
     background-position: left;
+    @media (max-width: 992px) {
+        &:not(:last-child){
+            margin-right: 40px;
+            margin-bottom: 20px;
+        }
+    }
 }
 .line__link--phone{
     background-image: url('../../img/phone.svg');
@@ -79,4 +111,12 @@
     &:not(:last-child){
         margin-right: 68px;
     }
+    @media (max-width: 992px) {
+        &:not(:last-child){
+            margin-bottom: 17px;
+        }
+    }
+}
+.nav__line--active {
+    transform: translate(0%, 95px);
 }
