--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -46,6 +46,7 @@ a {
 	min-height: 100%;
 	padding: 0;
 	margin: 0;
+	overflow: hidden;
 }
 //-----[--/ОБОЛОЧКА/--]---------------------------------------------------------------------------------------------------------------
 
