--- a/docs/scss/components/_service.scss
+++ b/docs/scss/components/_service.scss
@@ -2,14 +2,26 @@
     width: 100%;
     background: #ebebeb;
     padding: 140px 0px;
+    @media (max-width: 992px) {
+        padding: 70px 0px;
+    }
 }
 .service__subtitle {
     margin: 0px 0px 100px 0px;
+    @media (max-width: 992px) {
+        margin: 0px 0px 50px 0px;
+    }
 }
 .service__content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
+    @media (max-width: 992px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 768px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 .service__card {
     position: relative;
@@ -18,6 +30,7 @@
     background: url('../../img/about-card.png') center/cover no-repeat,#2F3135;
     display: flex;
     align-items: end;
+    cursor: pointer;
     &::before {
         position: absolute;
         display: block;
@@ -31,7 +44,6 @@
         z-index: 1;
         transition: all .3s ease-out;
     }
-    cursor: pointer;
 }
 .service__card:hover.service__card::before {
     background-color: #005FA3;
