--- a/docs/scss/components/_titles.scss
+++ b/docs/scss/components/_titles.scss
@@ -8,6 +8,9 @@
     color: #bdbdbd;
     text-align: left;
     margin: 0px 0px 40px 0px;
+    @media (max-width: 992px) {
+        margin: 0px 0px 20px 0px;
+    }
 }
 .subtitle {
     display: block;
@@ -20,5 +23,8 @@
     text-align: left;
     span  {
         display: block;
+    }
+    @media (max-width: 992px) {
+        font-size: 40px;
     }
 }
