--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -5,6 +5,9 @@
 	--text-color: #222;
 	--accent: #005fa3;
 	--white: #fff;
+	--grey: #808080;
+	--light-grey: #ebebeb;
+	--black: #000000;
 }
 //-----[--/ПЕРЕМЕННЫЕ/--]-------------------------------------------------------------------------------------------------------------
 
