--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -80,6 +80,7 @@ a {
 @import './components/header';
 @import './components/titles';
 @import './components/service';
+@import './components/about';
 //-----[--/ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ/--]--------------------------------------------------------------------------
 
 
