--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -367,6 +367,13 @@ a {
   }
 }
 
+/* Cards */
+.cards {
+  display: -ms-grid;
+  display: grid;
+  gap: 30px;
+}
+
 /* Button */
 .button {
   display: block;
@@ -824,6 +831,7 @@ a {
 }
 .subtitle span {
   display: block;
+  color: var(--accent);
 }
 @media (max-width: 992px) {
   .subtitle {
@@ -846,11 +854,8 @@ a {
 }
 
 .services__content {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 30px 1fr 30px 1fr;
+  -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
 }
 @media (max-width: 992px) {
   .services__content {
@@ -911,6 +916,107 @@ a {
 }
 .services__text span {
   display: block;
+}
+
+.about__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media (max-width: 992px) {
+  .about__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.about__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+}
+@media (max-width: 992px) {
+  .about__content {
+    margin: 0px 0px 30px 0px;
+  }
+}
+
+.about__subtitle {
+  margin: 0px 0px 60px 0px;
+}
+@media (max-width: 992px) {
+  .about__subtitle {
+    margin: 0px 0px 30px 0px;
+  }
+}
+
+.about__text {
+  margin: 0;
+  padding: 0px 110px 0px 0px;
+  font-family: var(--font-family);
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--black);
+}
+@media (max-width: 992px) {
+  .about__text {
+    padding: 0px;
+  }
+}
+
+.about__cards {
+  -ms-grid-columns: (1fr)[2];
+  grid-template-columns: repeat(2, 1fr);
+}
+@media (max-width: 768px) {
+  .about__cards {
+    -ms-grid-columns: (1fr)[1];
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.about__card {
+  padding: 30px 40px 40px 40px;
+  min-height: 255px;
+  max-width: 255px;
+  background: var(--light-grey);
+}
+@media (max-width: 992px) {
+  .about__card {
+    max-width: 100%;
+  }
+}
+
+.card__title {
+  margin: 0px 0px 30px 0px;
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 55px;
+  letter-spacing: 10%;
+  text-transform: uppercase;
+  color: var(--black);
+}
+
+.card__text {
+  margin: 0px 0px 45px 0px;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--black);
+}
+
+.card__link {
+  display: block;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 14px;
+  text-decoration: underline;
+  color: var(--accent);
+  padding: 5px 0px;
 }
 
 .none {
