--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -81,6 +81,8 @@ a {
 @import './components/titles';
 @import './components/service';
 @import './components/about';
+@import './components/clients';
+@import './components/slider';
 //-----[--/ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ/--]--------------------------------------------------------------------------
 
 
