добавил секцию Отзывы

--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -83,6 +83,7 @@ a {
 @import './components/about';
 @import './components/clients';
 @import './components/slider';
+@import './components/reviews.scss';
 //-----[--/ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ/--]--------------------------------------------------------------------------
 
 
