--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1037,6 +1037,17 @@ a {
 
 .clients {
   background-color: var(--light-grey);
+  padding: 100px 0px;
+}
+@media (max-width: 992px) {
+  .clients {
+    padding: 80px 0px;
+  }
+}
+@media (max-width: 768px) {
+  .clients {
+    padding: 60px 0px;
+  }
 }
 
 .clients__slider {
@@ -1065,6 +1076,80 @@ a {
   display: block;
   max-width: 250px;
   max-height: 130px;
+}
+
+.reviews__subtitle {
+  margin: 0px 0px 80px 0px;
+}
+@media (max-width: 992px) {
+  .reviews__subtitle {
+    margin: 0px 0px 40px 0px;
+  }
+}
+
+.reviews__item {
+  background-color: var(--light-grey);
+  padding: 45px 95px;
+  margin: 0px 0px 50px 0px;
+}
+@media (max-width: 992px) {
+  .reviews__item {
+    padding: 15px 15px;
+    margin: 0px 0px 35px 0px;
+  }
+}
+
+.reviews__text {
+  margin: 0px 0px 60px 0px;
+  font-family: var(--font-family);
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--black);
+}
+
+.reviews__user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.user__photo {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0px 35px 0px 0px;
+}
+
+.user__img {
+  width: 80px;
+  height: 80px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.user__name {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 25PX;
+  color: var(--black);
+  margin: 0px 0px 10px 0px;
+}
+
+.user__post {
+  margin: 0;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19PX;
+  color: #4f4f4f;
 }
 
 .none {
