--- a/docs/scss/components/_clients.scss
+++ b/docs/scss/components/_clients.scss
@@ -1,5 +1,12 @@
 .clients {
     background-color: var(--light-grey);
+    padding: 100px 0px;
+    @media (max-width: 992px) {
+        padding: 80px 0px;
+    }
+    @media (max-width: 768px) {
+        padding: 60px 0px;
+    }
 }
 .clients__slider {
     display: grid;
