добавил секцию права и секцию футер

--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -83,7 +83,9 @@ a {
 @import './components/about';
 @import './components/clients';
 @import './components/slider';
-@import './components/reviews.scss';
+@import './components/reviews';
+@import './components/footer';
+@import './components/rights';
 //-----[--/ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ/--]--------------------------------------------------------------------------
 
 
