--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1152,6 +1152,101 @@ a {
   color: #4f4f4f;
 }
 
+.footer__info {
+  padding: 125px 0px 140px 0px;
+}
+@media (max-width: 992px) {
+  .footer__info {
+    padding: 60px 0px 70px 0px;
+  }
+}
+
+.footer__subtitle {
+  margin: 0px 0px 60px 0px;
+  color: var(--white);
+}
+@media (max-width: 992px) {
+  .footer__subtitle {
+    margin: 0px 0px 35px 0px;
+  }
+}
+
+.footer__text {
+  font-family: var(--font-family);
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--white);
+  margin: 0px 0px 80px 0px;
+}
+@media (max-width: 992px) {
+  .footer__text {
+    margin: 0px 0px 40px 0px;
+  }
+}
+
+.footer__contacts {
+  font-size: 0;
+}
+
+.footer__link {
+  display: inline-block;
+  font-family: var(--font-family);
+  font-weight: 300;
+  font-size: 21px;
+  line-height: 29px;
+  color: var(--white);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: contain;
+}
+.footer__link:not(:last-child) {
+  margin: 0px 30px 0px 0px;
+}
+.footer__link:first-child {
+  padding: 0px 0px 0px 33px;
+}
+.footer__link:last-child {
+  padding: 0px 0px 0px 56px;
+}
+
+.rights {
+  padding: 50px 0px 40px;
+}
+@media (max-width: 992px) {
+  .rights {
+    padding: 60px 0px 70px 0px;
+  }
+}
+
+.rights__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media (max-width: 992px) {
+  .rights__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.rights__copyright, .rights__author {
+  font-family: var(--font-family);
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+  color: var(--black);
+}
+
 .none {
   display: none !important;
 }
