доделал секцию футер

--- a/docs/scss/components/_nav.scss
+++ b/docs/scss/components/_nav.scss
@@ -94,11 +94,17 @@
 .line__link--phone{
     background-image: url('../../img/phone.svg');
 }
+.line__link--white-phone {
+    background-image: url('../../img/phone-white.svg');
+}
 .line__link--time{
     background-image: url('../../img/time.svg');
 }
 .line__link--envelope{
     background-image: url('../../img/envelope.svg');
+}
+.line__link--white-envelope {
+    background-image: url('../../img/envelope-white.svg');
 }
 .line__link--map{
     background-image: url('../../img/map.svg');
