--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -86,6 +86,7 @@ a {
 @import './components/reviews';
 @import './components/footer';
 @import './components/rights';
+@import './components/form';
 //-----[--/ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ/--]--------------------------------------------------------------------------
 
 
