--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Merriweather:wght@700;900&display=swap");
 :root {
   --font-family: "Lato", sans-serif;
@@ -377,7 +378,7 @@ a {
 /* Button */
 .button {
   display: block;
-  width: 23%;
+  width: 100%;
   border: 1px solid transparent;
   padding: 19px 18px;
   font-family: var(--font-family);
@@ -711,12 +712,20 @@ a {
   background-image: url("../../img/phone.svg");
 }
 
+.line__link--white-phone {
+  background-image: url("../../img/phone-white.svg");
+}
+
 .line__link--time {
   background-image: url("../../img/time.svg");
 }
 
 .line__link--envelope {
   background-image: url("../../img/envelope.svg");
+}
+
+.line__link--white-envelope {
+  background-image: url("../../img/envelope-white.svg");
 }
 
 .line__link--map {
@@ -799,13 +808,16 @@ a {
   }
 }
 
-/* .fullscreen__button {
-    width: 23%;
-    @media (max-width: 768px) {
-        width: 100%;
-        padding: 19px 10px;
-    }
-} */
+.fullscreen__button {
+  width: 23%;
+}
+@media (max-width: 768px) {
+  .fullscreen__button {
+    width: 100%;
+    padding: 19px 10px;
+  }
+}
+
 .title {
   display: block;
   width: 100%;
@@ -1153,11 +1165,30 @@ a {
 }
 
 .footer__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   padding: 125px 0px 140px 0px;
 }
 @media (max-width: 992px) {
   .footer__info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding: 60px 0px 70px 0px;
+  }
+}
+
+.footer__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 0px 85px 0px 0px;
+}
+@media (max-width: 992px) {
+  .footer__content {
+    padding: 0px 0px 85px 0px;
   }
 }
 
@@ -1187,10 +1218,30 @@ a {
 
 .footer__contacts {
   font-size: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media (max-width: 1200px) {
+  .footer__contacts {
+    display: block;
+  }
+}
+@media (max-width: 992px) {
+  .footer__contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media (max-width: 768px) {
+  .footer__contacts {
+    display: block;
+  }
 }
 
 .footer__link {
-  display: inline-block;
+  display: block;
   font-family: var(--font-family);
   font-weight: 300;
   font-size: 21px;
@@ -1199,6 +1250,7 @@ a {
   background-repeat: no-repeat;
   background-position: left;
   background-size: contain;
+  border: 1px solid transparent;
 }
 .footer__link:not(:last-child) {
   margin: 0px 30px 0px 0px;
@@ -1209,9 +1261,53 @@ a {
 .footer__link:last-child {
   padding: 0px 0px 0px 56px;
 }
+.footer__link:hover {
+  text-decoration: underline;
+}
+@media (max-width: 1200px) {
+  .footer__link:not(:last-child) {
+    margin: 0px 0px 15px 0px;
+  }
+}
+@media (max-width: 992px) {
+  .footer__link:not(:last-child) {
+    margin: 0px 30px 0px 0px;
+  }
+}
+@media (max-width: 768px) {
+  .footer__link:not(:last-child) {
+    margin: 0px 0px 15px 0px;
+  }
+}
+
+.footer__form {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 0px 0px 0px 15px;
+}
+
+.footer__button {
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  width: 48.5%;
+}
+@media (max-width: 992px) {
+  .footer__button {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
+@media (max-width: 768px) {
+  .footer__button {
+    width: 100%;
+  }
+}
 
 .rights {
-  padding: 50px 0px 40px;
+  padding: 35px 0px 30px;
 }
 @media (max-width: 992px) {
   .rights {
@@ -1219,32 +1315,135 @@ a {
   }
 }
 
-.rights__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-@media (max-width: 992px) {
-  .rights__item {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
 .rights__copyright, .rights__author {
+  display: inline-block;
+  width: 49%;
+  margin: 0;
+  padding: 15px 0px 10px 0px;
   font-family: var(--font-family);
   font-weight: 300;
   font-size: 14px;
   line-height: 19px;
   color: var(--black);
+}
+@media (max-width: 768px) {
+  .rights__copyright, .rights__author {
+    display: block;
+    width: 100%;
+  }
+}
+
+.rights__copyright {
+  text-align: left;
+}
+@media (max-width: 768px) {
+  .rights__copyright {
+    text-align: center;
+  }
+}
+
+.rights__author {
+  text-align: right;
+}
+@media (max-width: 768px) {
+  .rights__author {
+    text-align: center;
+  }
+}
+
+/* Form */
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 15px 0px 15px 15px;
+}
+
+.form__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* Input */
+.form__input {
+  display: block;
+  width: 100%;
+}
+
+.form__input, .form__textarea {
+  padding: 31px 0 15px;
+  background: transparent;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: 1px solid var(--white);
+  font-family: var(--font-family);
+  font-weight: 300;
+  font-size: 21px;
+  line-height: 29px;
+  color: var(--light-grey);
+  outline: none;
+}
+
+/* Textarea */
+.form__textarea {
+  display: block;
+  width: 100%;
+  height: 160px;
+  resize: none;
+  margin: 0px 0px 50px 0px;
+}
+
+/* Label */
+.form__label {
+  position: relative;
+  margin: 0px 30px 35px 0px;
+}
+.form__label:last-child {
+  margin: 0px 0px 35px 0px;
+}
+.form__label::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: var(--white);
+}
+
+.form__label--name {
+  width: 50%;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+}
+
+.form__label--surname {
+  width: 50%;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+}
+
+.form__label--name::before {
+  content: "Имя";
+}
+
+.form__label--surname::before {
+  content: "Фамилия";
+}
+
+.form__label--textarea::before {
+  content: "Сообщение";
 }
 
 .none {
