--- a/docs/scss/components/_footer.scss
+++ b/docs/scss/components/_footer.scss
@@ -2,9 +2,18 @@
     
 }
 .footer__info {
+    display: flex;
     padding: 125px 0px 140px 0px;
     @media (max-width: 992px) {
+        flex-direction: column;
         padding: 60px 0px 70px 0px;
+    }
+}
+.footer__content {
+    flex: 1 1 50%;
+    padding: 0px 85px 0px 0px;
+    @media (max-width: 992px) {
+        padding: 0px 0px 85px 0px;
     }
 }
 .footer__subtitle {
@@ -27,9 +36,19 @@
 }
 .footer__contacts {
     font-size: 0;
+    display: flex;
+    @media (max-width: 1200px) {
+        display: block;
+    }
+    @media (max-width: 992px) {
+        display: flex;
+    }
+    @media (max-width: 768px) {
+        display: block;
+    }
 }
 .footer__link {
-    display: inline-block;
+    display: block;
     font-family: var(--font-family);
     font-weight: 300;
     font-size: 21px;
@@ -38,6 +57,7 @@
     background-repeat: no-repeat;
     background-position: left;
     background-size: contain;
+    border: 1px solid transparent;
     &:not(:last-child) {
         margin: 0px 30px 0px 0px;
     }
@@ -46,5 +66,43 @@
     }
     &:last-child {
         padding: 0px 0px 0px 56px;
+    }
+    &:hover {
+        text-decoration: underline;
+    }
+    @media (max-width: 1200px) {
+        &:not(:last-child) {
+            margin: 0px 0px 15px 0px;
+        }
+    }
+    @media (max-width: 992px) {
+        &:not(:last-child) {
+            margin: 0px 30px 0px 0px;
+        }
+    }
+    @media (max-width: 768px) {
+        &:not(:last-child) {
+            margin: 0px 0px 15px 0px;
+        }
+    }
+}
+.footer__form {
+    flex: 1 1 50%;
+    padding: 0px 0px 0px 15px;
+}
+.footer__input {
+    
+}
+.footer__input, .footer__textarea {
+    
+}
+.footer__button {
+    align-self: end;
+    width: 48.5%;
+    @media (max-width: 992px) {
+        align-self: center;
+    }
+    @media (max-width: 768px) {
+        width: 100%;
     }
 }
