--- a/docs/scss/components/_header.scss
+++ b/docs/scss/components/_header.scss
@@ -36,10 +36,10 @@
         padding: 30px 0px 45px 0px;
     }
 }
-/* .fullscreen__button {
+.fullscreen__button {
     width: 23%;
     @media (max-width: 768px) {
         width: 100%;
         padding: 19px 10px;
     }
-} */
+}
