--- a/docs/scss/components/_rights.scss
+++ b/docs/scss/components/_rights.scss
@@ -1,21 +1,33 @@
 .rights {
-    padding: 50px 0px 40px;
+    padding: 35px 0px 30px;
     @media (max-width: 992px) {
         padding: 60px 0px 70px 0px;
     }
 }
-.rights__item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    @media (max-width: 992px) {
-        flex-direction: column;
-    }
-}
 .rights__copyright, .rights__author {
+    display: inline-block;
+    width: 49%;
+    margin: 0;
+    padding: 15px 0px 10px 0px;
     font-family: var(--font-family);
     font-weight: 300;
     font-size: 14px;
     line-height: 19px;
     color: var(--black);
+    @media (max-width: 768px) {
+        display: block;
+        width: 100%;
+    }
+}
+.rights__copyright {
+    text-align: left;
+    @media (max-width: 768px) {
+        text-align: center;
+    }
+}
+.rights__author {
+    text-align: right;
+    @media (max-width: 768px) {
+        text-align: center;
+    }
 }
