--- a/docs/scss/components/_nav.scss
+++ b/docs/scss/components/_nav.scss
@@ -19,7 +19,7 @@
     color: var(--accent);
 
     padding: 0px 0px 0px 70px;
-    background-image: url('../../img/logo.svg');
+    background-image: url('../img/logo.svg');
     background-repeat: no-repeat;
     background-position: left;
     background-size: 40px 40px;
@@ -92,22 +92,22 @@
     }
 }
 .line__link--phone{
-    background-image: url('../../img/phone.svg');
+    background-image: url('../img/phone.svg');
 }
 .line__link--white-phone {
-    background-image: url('../../img/phone-white.svg');
+    background-image: url('../img/phone-white.svg');
 }
 .line__link--time{
-    background-image: url('../../img/time.svg');
+    background-image: url('../img/time.svg');
 }
 .line__link--envelope{
-    background-image: url('../../img/envelope.svg');
+    background-image: url('../img/envelope.svg');
 }
 .line__link--white-envelope {
-    background-image: url('../../img/envelope-white.svg');
+    background-image: url('../img/envelope-white.svg');
 }
 .line__link--map{
-    background-image: url('../../img/map.svg');
+    background-image: url('../img/map.svg');
 }
 .line__link--big {
     font-weight: 700;
