--- a/docs/scss/components/_service.scss
+++ b/docs/scss/components/_service.scss
@@ -21,7 +21,7 @@
     position: relative;
     padding: 45px;
     min-height: 360px;
-    background: url('../../img/about-card.png') center/cover no-repeat, rgba(0, 0, 0, 0.65);
+    background: url('../img/about-card.png') center/cover no-repeat, rgba(0, 0, 0, 0.65);
     display: flex;
     align-items: end;
     cursor: pointer;
