--- a/docs/scss/components/_form.scss
+++ b/docs/scss/components/_form.scss
@@ -23,6 +23,7 @@
     border-right: none;
     border-left: none;
     border-bottom: 1px solid var(--white);
+    border-radius: 0px;
     font-family: var(--font-family);
     font-weight: 300;
     font-size: 21px;
