--- a/docs/scss/components/_titles.scss
+++ b/docs/scss/components/_titles.scss
@@ -28,4 +28,7 @@
     @media (max-width: 992px) {
         font-size: 40px;
     }
+    @media (max-width: 768px) {
+        font-size: 34px;
+    }
 }
