--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -621,6 +621,8 @@ a {
 .nav__line {
   display: block;
   position: static;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 @media (max-width: 992px) {
   .nav__line {
@@ -894,6 +896,7 @@ a {
 .services__card {
   position: relative;
   padding: 45px;
+  max-width: 350px;
   min-height: 360px;
   background: url("../img/about-card.png") center/cover no-repeat, rgba(0, 0, 0, 0.65);
   display: -webkit-box;
@@ -1312,6 +1315,7 @@ a {
 }
 
 .rights {
+  font-size: 0;
   padding: 35px 0px 30px;
 }
 @media (max-width: 992px) {
@@ -1454,4 +1458,36 @@ a {
 
 .none {
   display: none !important;
+}
+
+/* для FireFox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--accent) var(--grey);
+}
+
+/* для Chrome/Edge/Safari */
+*::-webkit-scrollbar {
+  height: 12px;
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--grey);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--accent);
+  border-radius: 5px;
+  border: 3px solid var(--accent);
+}
+
+*::-moz-selection {
+  background-color: var(--grey);
+  color: var(--accent);
+}
+
+*::selection {
+  background-color: var(--grey);
+  color: var(--accent);
 }
