--- a/docs/scss/components/_service.scss
+++ b/docs/scss/components/_service.scss
@@ -20,6 +20,7 @@
 .services__card {
     position: relative;
     padding: 45px;
+    max-width: 350px;
     min-height: 360px;
     background: url('../img/about-card.png') center/cover no-repeat, rgba(0, 0, 0, 0.65);
     display: flex;
