--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -96,4 +96,29 @@ a {
 .none {
 	display: none !important; 
 }
+
+/* для FireFox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--accent) var(--grey);
+}
+
+/* для Chrome/Edge/Safari */
+*::-webkit-scrollbar {
+    height: 12px;
+    width: 12px;
+}
+*::-webkit-scrollbar-track {
+    background: var(--grey);
+}
+*::-webkit-scrollbar-thumb {
+    background-color: var(--accent);
+    border-radius: 5px;
+    border: 3px solid var(--accent);
+}
+
+*::selection {
+	background-color: var(--grey);
+	color: var(--accent);
+}
 //-----[--/Вспомогательные стили/--]-------------------------------------------------------------------------------------------------- 
