--- a/docs/scss/components/_clients.scss
+++ b/docs/scss/components/_clients.scss
@@ -8,18 +8,8 @@
         padding: 60px 0px;
     }
 }
-.clients__slider {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 30px;
-    margin: 0px 0px 100px 0px;
-    @media (max-width: 992px) {
-        margin: 0px 0px 50px 0px;
-        grid-template-columns: repeat(2, 1fr);
-    }
-    @media (max-width: 768px) {
-        grid-template-columns: repeat(1, 1fr);
-    }
+.clients__item {
+    margin: 0px 0px 0px -6px;
 }
 .clients__img {
     display: block;
